@@ -11,26 +11,29 @@ import static org.junit.jupiter.api.Assertions.*;
 class SvatkySluzbaTest {
 
     @Test
-    void zjistitKdyzNeniSvatek() throws IOException  {
+    void zjistitKdyzNeniSvatek() throws IOException {
         SvatkySluzba svatky = new SvatkySluzba();
         int resultNeniJmeno = 0;
-        assertEquals(resultNeniJmeno, svatky.vyhledatSvatkyKeDni(MonthDay.of(5, 1)).size());
+        assertEquals(resultNeniJmeno, svatky.vyhledatSvatkyKeDni(MonthDay.of(5, 1)).size(), "Něco je divně, tento den nemá mít svátek nikdi.")
+        ;
     }
+
     @Test
-    void zjistiKdyzJeViceJmen() throws IOException{
+    void zjistiKdyzJeViceJmen() throws IOException {
         SvatkySluzba svatky = new SvatkySluzba();
-        List<String> resultKdyzJeViceJmen = svatky.vyhledatSvatkyKeDni(MonthDay.of(4,24));
-            assertEquals(resultKdyzJeViceJmen.get(0), "Jiří");
-            assertEquals(resultKdyzJeViceJmen.get(1), "Jarilo");
-            assertEquals(resultKdyzJeViceJmen.size(), 2);
+        List<String> resultKdyzJeViceJmen = svatky.vyhledatSvatkyKeDni(MonthDay.of(4, 24));
+        assertEquals(resultKdyzJeViceJmen.get(0), "Jiří", "Něco je divně, nenašel jsem Jiřího.");
+        assertEquals(resultKdyzJeViceJmen.get(1), "Jarilo", "Něco je divně, nenašel jsem Jiřího.");
+        assertEquals(resultKdyzJeViceJmen.size(), 2, "Něco je divně, tady by měly být 2 jména.");
     }
+
     @Test
-    void zjistiKdyzJeJednoJmeno() throws IOException{
+    void zjistiKdyzJeJednoJmeno() throws IOException {
         SvatkySluzba svatky = new SvatkySluzba();
-        List<String> resultKdyzJeViceJmen = svatky.vyhledatSvatkyKeDni(MonthDay.of(8,11));
-        assertEquals(resultKdyzJeViceJmen.get(0), "Zuzana");
-        assertEquals(resultKdyzJeViceJmen.size(), 1);
+        List<String> resultKdyzJeViceJmen = svatky.vyhledatSvatkyKeDni(MonthDay.of(8, 11));
+        assertEquals(resultKdyzJeViceJmen.getFirst(), "Zuzana", "Něco je divně, nenašel jsem Zuzanu.");
+        assertEquals(resultKdyzJeViceJmen.size(), 1, "Něco je divně,tady by mělo být 1 jméno.");
 
 
     }
-};
+}
